<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/relativeLayout1">
    	<ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView1" android:layout_alignParentTop="true"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView2" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/imageView1"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView3" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/imageView2"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView4" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/imageView3"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView5" android:layout_below="@+id/imageView1" android:layout_alignParentLeft="true"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView6" android:layout_alignTop="@+id/imageView5" android:layout_alignLeft="@+id/imageView2"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView7" android:layout_alignTop="@+id/imageView6" android:layout_alignLeft="@+id/imageView3"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView8" android:layout_alignTop="@+id/imageView7" android:layout_toRightOf="@+id/imageView7"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView9" android:layout_below="@+id/imageView5" android:layout_alignParentLeft="true"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView10" android:layout_below="@+id/imageView6" android:layout_alignLeft="@+id/imageView6"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView11" android:layout_alignTop="@+id/imageView10" android:layout_alignLeft="@+id/imageView7"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView12" android:layout_alignTop="@+id/imageView11" android:layout_alignLeft="@+id/imageView8"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView13" android:layout_below="@+id/imageView9" android:layout_alignParentLeft="true"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView14" android:layout_alignTop="@+id/imageView13" android:layout_alignLeft="@+id/imageView10"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView15" android:layout_below="@+id/imageView11" android:layout_alignLeft="@+id/imageView11"></ImageView>
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/androidbutton" android:id="@+id/imageView16" android:layout_alignTop="@+id/imageView15" android:layout_toRightOf="@+id/imageView15"></ImageView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText1" android:text="1" android:layout_alignLeft="@+id/imageView1" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText2" android:text="2" android:layout_alignLeft="@+id/imageView2" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText3" android:text="3" android:layout_alignLeft="@+id/imageView3" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText4" android:text="4" android:layout_alignLeft="@+id/imageView4" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText5" android:text="5" android:layout_alignTop="@+id/imageView5" android:layout_alignLeft="@+id/imageView5" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText6" android:text="6" android:layout_alignTop="@+id/imageView6" android:layout_alignLeft="@+id/imageView6" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText7" android:text="7" android:layout_alignTop="@+id/imageView7" android:layout_alignLeft="@+id/imageView7" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText8" android:text="8" android:layout_alignTop="@+id/imageView8" android:layout_alignLeft="@+id/imageView8" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText9" android:text="9" android:layout_alignTop="@+id/imageView9" android:layout_alignLeft="@+id/imageView9" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText10" android:text="10" android:layout_alignTop="@+id/imageView10" android:layout_alignLeft="@+id/imageView10" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText11" android:text="11" android:layout_alignTop="@+id/imageView11" android:layout_alignLeft="@+id/imageView11" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText12" android:text="12" android:layout_alignTop="@+id/imageView12" android:layout_alignLeft="@+id/imageView12" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText13" android:text="13" android:layout_alignTop="@+id/imageView13" android:layout_alignLeft="@+id/imageView13" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText14" android:text="14" android:layout_alignTop="@+id/imageView14" android:layout_alignLeft="@+id/imageView14" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText15" android:text="15" android:layout_alignTop="@+id/imageView15" android:layout_alignLeft="@+id/imageView15" android:textSize="30px" android:maxWidth="200px"/>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sampleText16" android:text="16" android:layout_alignTop="@+id/imageView16" android:layout_alignLeft="@+id/imageView16" android:textSize="30px" android:maxWidth="200px"/>
        
        <TextView android:layout_height="wrap_content" android:layout_alignBottom="@+id/textView3" android:textSize="50px" android:layout_toRightOf="@+id/textView3" android:text="@string/an" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/textView3"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:textSize="50px" android:text="@string/zo" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_alignParentBottom="true"></TextView>
        <TextView android:layout_height="wrap_content" android:textSize="50px" android:layout_toRightOf="@+id/textView2" android:text="@string/h" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_alignParentBottom="true"></TextView>
        <TextView android:layout_height="wrap_content" android:textSize="50px" android:layout_alignLeft="@+id/button17" android:layout_below="@+id/button18" android:text="@string/zampler" android:id="@+id/textView1" android:layout_width="wrap_content"></TextView>
        <Button android:layout_height="wrap_content" android:text="Save Sample Set" android:id="@+id/button18" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/button17" android:layout_alignBottom="@+id/button17" android:layout_alignParentRight="true"></Button>
        <Button android:layout_height="wrap_content" android:text="Load Sample Set" android:id="@+id/button17" android:layout_width="wrap_content" android:layout_below="@+id/radioGroup1" android:layout_toLeftOf="@+id/button18"></Button>
        <RadioGroup android:id="@+id/radioGroup1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignLeft="@+id/button17">
            <RadioButton android:checked="true" android:layout_width="wrap_content" android:id="@+id/radio0" android:text="@string/play" android:layout_height="wrap_content"></RadioButton>
            <RadioButton android:layout_width="wrap_content" android:id="@+id/radio1" android:text="@string/loop" android:layout_height="wrap_content"></RadioButton>
            <RadioButton android:layout_width="wrap_content" android:id="@+id/radio2" android:text="@string/record" android:layout_height="wrap_content"></RadioButton>
            <RadioButton android:layout_width="wrap_content" android:id="@+id/radioButton1" android:text="@string/load" android:layout_height="wrap_content"></RadioButton>
        </RadioGroup>
    </RelativeLayout>   
</LinearLayout>
